# swm11th-servience-overall

./: README.md
app/src/servience/: README.md  pubspec.yaml
app/src/servience/android/app/: build.gradle
app/src/servience/android/app/src/main/: AndroidManifest.xml
app/src/servience/android/app/src/main/kotlin/com/example/servience/: MainActivity.kt
app/src/servience/android/app/src/profile/: AndroidManifest.xml
app/src/servience/ios/Runner/: Info.plist
app/src/servience/ios/Runner.xcodeproj/: project.pbxproj
app/src/servience/lib/: main.dart
app/src/servience/lib/components/: button.dart  menu.dart  textField.dart
app/src/servience/lib/config/: baseURL.dart
app/src/servience/lib/models/: item.dart  providerModels.dart
app/src/servience/lib/page/: first.dart  login.dart  menu.dart  purchasement.dart  registration.dart  thanks.dart
app/src/servience/lib/utils/: beautifyPrice.dart  sharedPreferencesAccesor.dart
app/src/servience/linux/: CMakeLists.txt  my_application.cc
app/src/servience/macos/Runner.xcodeproj/: project.pbxproj
app/src/servience/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/src/servience/macos/Runner/Configs/: AppInfo.xcconfig
app/src/servience/test/: widget_test.dart
app/src/servience/web/: index.html  manifest.json
display/: README.md
display/src/my-app/: README.md  package.json
display/src/my-app/public/: index.html  manifest.json
display/src/my-app/src/: index.css  index.js
display/src/my-app/src/client/: Root.js
display/src/my-app/src/components/: item.js  order.css  order.js  servingElement.js
display/src/my-app/src/config/: baseURL.js
display/src/my-app/src/pages/: Cup.css  Cup.js  Home.css  Home.js  Moving.css  Moving.js  SelectMenu.css  SelectMenu.js  SelectOrder.js  ServingList.js  Setup.css  Setup.js  index.js
display/src/my-app/src/shared/: App.js
display/src/my-app/src/stores/: index.js  order.js
display/src/my-app/src/utils/: websocket.js
robot/: README.md  setup.sh
robot/src/add_light_sensor/turtlebot3_core/: turtlebot3_core.ino  turtlebot3_core_config.h
robot/src/master_node/: README.md  master.cpp
robot/src/master_node/master/: CMakeLists.txt  package.xml
robot/src/master_node/master/msg/: CupNumber.msg
robot/src/master_node/master/src/: master.cpp
robot/src/my_driver/: CMakeLists.txt  package.xml
robot/src/my_driver/src/: map.pgm  map_11.pgm  service_cor2.cpp
robot/src/sending_goals/: sending_goals  sending_goals.cpp
server/: README.md
